# comparch

./: readme.md
hw1/: CMakeLists.txt  circle.c  circle.h  container.c  container.h  figure.c  figure.h  main.c  point.h  readme.md  rectangle.c  rectangle.h  triangle.c  triangle.h
hw2/: CMakeLists.txt  circle.cpp  circle.h  container.cpp  container.h  figure.cpp  figure.h  main.cpp  readme.md  rectangle.cpp  rectangle.h  triangle.cpp  triangle.h
hw2/tests/: input4.txt  output1.txt  output2.txt  output3.txt  output4.txt  output5.txt  random_tmp.txt  randomoutput1.txt
hw3/: circle.py  container.py  figure.py  main.py  readme.md  rectangle.py  triangle.py
hw4/: circle.asm  container.asm  figure.asm  readme.md  rectangle.asm  release.asm  run.sh  triangle.asm
hw4/tests/: input1.txt  input2.txt  input3.txt  input5.txt
hw5/: Book.cpp  Book.h  CMakeLists.txt  Library.cpp  Library.h  main.cpp  readme.md
